Trying to make background look good on a phone while still good elsewhere; changed background-size from stretch stretch to 100% 100% and added background-attachment set to fixed.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -31,8 +31,9 @@
 }
 
 .home-page-body {
+  background-attachment: fixed;
   background-image: url(asset_path('home-page-background.jpg'));
-  background-size: stretch stretch;
+  background-size: 100% 100%;
   color: #488048;
 }
 
